# swagger_server/controllers/prospections_controller.py
@@ -1,6 +1,7 @@
 import logging
 from flask import request, jsonify
 from swagger_server.models.prospect_request import ProspectRequest  # noqa: E501
+from ..models import IdStateprospectionsBody
 from ..repositories.prospect_repository import ProspectRepository  # Import repository
 
 prospect_repository = ProspectRepository()
@@ -27,14 +28,8 @@ def prospections_post():  # noqa: E501
     if request.is_json:
         try:
             data = request.get_json()
-            # Extrae los datos necesarios del cuerpo de la solicitud
-            prospection_data = data.get("prospection")
 
-            if not prospection_data:
-                return {"message": "Prospection data is required."}, 400
-
-            # Llama al repositorio para crear la prospección
-            response, status = prospect_repository.create_prospection(prospection_data)
+            response, status = prospect_repository.create_prospection(data)
             return jsonify(response), status
 
         except Exception as e:
@@ -51,8 +46,29 @@ def prospections_id_patch(id_):  # noqa: E501
     if request.is_json:
         try:
             data = request.get_json()
-            # Llama al repositorio para actualizar la prospección con los datos recibidos
             response, status = prospect_repository.update_prospection(id_, data)
+            return jsonify(response), status
+
+        except Exception as e:
+            logging.error(f"Error updating prospection: {e}")
+            return {"message": f"Error processing request: {str(e)}"}, 500
+    else:
+        return {"message": "Request body must be JSON."}, 400
+
+def prospects_id_prospections_get(id_):  # noqa: E501
+    return prospect_repository.get_prospections_by_prospect_id(id_)
+
+def prospections_id_history_get(id_):
+    return prospect_repository.get_prospection_history_with_logs(id_)
+
+def get_state_prospection():  # noqa: E501
+    return prospect_repository.get_state_prospections()
+
+def prospections_id_state_patch(id_):  # noqa: E501
+    if request.is_json:
+        try:
+            data = request.get_json()  # noqa: E501
+            response, status = prospect_repository.update_prospection_state(id_, data)
             return jsonify(response), status
 
         except Exception as e:
