# swagger_server/models/__init__.py
@@ -4,6 +4,8 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.email import Email
+from swagger_server.models.history_log import HistoryLog
+from swagger_server.models.id_stateprospections_body import IdStateprospectionsBody
 from swagger_server.models.note import Note
 from swagger_server.models.prospect_request import ProspectRequest
 from swagger_server.models.prospect_request_prospect import ProspectRequestProspect
@@ -11,4 +13,5 @@ from swagger_server.models.prospect_update import ProspectUpdate
 from swagger_server.models.prospect_with_user import ProspectWithUser
 from swagger_server.models.prospection import Prospection
 from swagger_server.models.prospection_request import ProspectionRequest
+from swagger_server.models.state_prospection import StateProspection
 from swagger_server.models.user import User
