# swagger_server/models/history_log.py
@@ -1,0 +1,120 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class HistoryLog(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, type: str=None, description: str=None, _date: date=None):  # noqa: E501
+        """HistoryLog - a model defined in Swagger
+
+        :param type: The type of this HistoryLog.  # noqa: E501
+        :type type: str
+        :param description: The description of this HistoryLog.  # noqa: E501
+        :type description: str
+        :param _date: The _date of this HistoryLog.  # noqa: E501
+        :type _date: date
+        """
+        self.swagger_types = {
+            'type': str,
+            'description': str,
+            '_date': date
+        }
+
+        self.attribute_map = {
+            'type': 'type',
+            'description': 'description',
+            '_date': 'date'
+        }
+        self._type = type
+        self._description = description
+        self.__date = _date
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'HistoryLog':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The HistoryLog of this HistoryLog.  # noqa: E501
+        :rtype: HistoryLog
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this HistoryLog.
+
+        Type of the history log (e.g., \"state change\" or \"advisor change\")  # noqa: E501
+
+        :return: The type of this HistoryLog.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this HistoryLog.
+
+        Type of the history log (e.g., \"state change\" or \"advisor change\")  # noqa: E501
+
+        :param type: The type of this HistoryLog.
+        :type type: str
+        """
+
+        self._type = type
+
+    @property
+    def description(self) -> str:
+        """Gets the description of this HistoryLog.
+
+        Description of the log entry  # noqa: E501
+
+        :return: The description of this HistoryLog.
+        :rtype: str
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description: str):
+        """Sets the description of this HistoryLog.
+
+        Description of the log entry  # noqa: E501
+
+        :param description: The description of this HistoryLog.
+        :type description: str
+        """
+
+        self._description = description
+
+    @property
+    def _date(self) -> date:
+        """Gets the _date of this HistoryLog.
+
+        Date when the event occurred  # noqa: E501
+
+        :return: The _date of this HistoryLog.
+        :rtype: date
+        """
+        return self.__date
+
+    @_date.setter
+    def _date(self, _date: date):
+        """Sets the _date of this HistoryLog.
+
+        Date when the event occurred  # noqa: E501
+
+        :param _date: The _date of this HistoryLog.
+        :type _date: date
+        """
+
+        self.__date = _date
