# swagger_server/models/id_stateprospections_body.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class IdStateprospectionsBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, new_state_id: int=None):  # noqa: E501
+        """IdStateprospectionsBody - a model defined in Swagger
+
+        :param new_state_id: The new_state_id of this IdStateprospectionsBody.  # noqa: E501
+        :type new_state_id: int
+        """
+        self.swagger_types = {
+            'new_state_id': int
+        }
+
+        self.attribute_map = {
+            'new_state_id': 'new_state_id'
+        }
+        self._new_state_id = new_state_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'IdStateprospectionsBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The id_stateprospections_body of this IdStateprospectionsBody.  # noqa: E501
+        :rtype: IdStateprospectionsBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def new_state_id(self) -> int:
+        """Gets the new_state_id of this IdStateprospectionsBody.
+
+        ID of the new state  # noqa: E501
+
+        :return: The new_state_id of this IdStateprospectionsBody.
+        :rtype: int
+        """
+        return self._new_state_id
+
+    @new_state_id.setter
+    def new_state_id(self, new_state_id: int):
+        """Sets the new_state_id of this IdStateprospectionsBody.
+
+        ID of the new state  # noqa: E501
+
+        :param new_state_id: The new_state_id of this IdStateprospectionsBody.
+        :type new_state_id: int
+        """
+
+        self._new_state_id = new_state_id
