# swagger_server/models/state_prospection.py
@@ -1,0 +1,120 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class StateProspection(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, id: int=None, description: str=None, state: int=None):  # noqa: E501
+        """StateProspection - a model defined in Swagger
+
+        :param id: The id of this StateProspection.  # noqa: E501
+        :type id: int
+        :param description: The description of this StateProspection.  # noqa: E501
+        :type description: str
+        :param state: The state of this StateProspection.  # noqa: E501
+        :type state: int
+        """
+        self.swagger_types = {
+            'id': int,
+            'description': str,
+            'state': int
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'description': 'description',
+            'state': 'state'
+        }
+        self._id = id
+        self._description = description
+        self._state = state
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'StateProspection':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The StateProspection of this StateProspection.  # noqa: E501
+        :rtype: StateProspection
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> int:
+        """Gets the id of this StateProspection.
+
+        ID of the state  # noqa: E501
+
+        :return: The id of this StateProspection.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: int):
+        """Sets the id of this StateProspection.
+
+        ID of the state  # noqa: E501
+
+        :param id: The id of this StateProspection.
+        :type id: int
+        """
+
+        self._id = id
+
+    @property
+    def description(self) -> str:
+        """Gets the description of this StateProspection.
+
+        Description of the state  # noqa: E501
+
+        :return: The description of this StateProspection.
+        :rtype: str
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description: str):
+        """Sets the description of this StateProspection.
+
+        Description of the state  # noqa: E501
+
+        :param description: The description of this StateProspection.
+        :type description: str
+        """
+
+        self._description = description
+
+    @property
+    def state(self) -> int:
+        """Gets the state of this StateProspection.
+
+        Status of the state  # noqa: E501
+
+        :return: The state of this StateProspection.
+        :rtype: int
+        """
+        return self._state
+
+    @state.setter
+    def state(self, state: int):
+        """Sets the state of this StateProspection.
+
+        Status of the state  # noqa: E501
+
+        :param state: The state of this StateProspection.
+        :type state: int
+        """
+
+        self._state = state
